k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - k8s-multi-cluster.com
        - www.k8s-multi-cluster.com
      secretName: k8s-multi-cluster-com
  rules:
  - host: k8s-multi-cluster-com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-clusterip-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api 
        backend:
          service:
            name: server-clusterip-service
            port:
              number: 5000
  - host: www.k8s-multi-cluster-com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-clusterip-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /api 
        backend:
          service:
            name: server-clusterip-service
            port:
              number: 5000
